2004-02-05  Petter Risholm  <risholm@stud.ntnu.no>

	* Array.cc (Array<T>::maybe_delete_elements): Reshape LHS
	when number of indices is less than number of dimensions.

	* Array.cc (Array<T>::assignN, Array<T>::maybe_delete_elements):
	Remove unsued variable lhs_inc.

	* Array.cc (Array<T>::maybe_delete_elements): Declare idx_is_colon
	and idx_is_colon_equiv Array<int> instead of dim_vector.

	* Array.cc (Array<T>::assignN): Compute new dims in a cleaner way.

	* Array.cc (Array<T>::index): Check for frozen_lengths.length ()
	== n_dims before checking to see if all indices are colon_equiv.

2004-02-05  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array.cc (Array<T>::assignN): Require RHS == 0x0 matrix for
	deleting elements.
	(Array<T>::index): Remove trailing singletons in ra_idx, but leave
	at least ndims elements.

2004-02-05  Petter Risholm  <risholm@stud.ntnu.no>

	* Array.cc (Array<T>::assignN): Accept assignment of a vector
	oriented differently from the index.

	* dim-vector.h (dim_vector::squeeze): Return value always has at
	least two dimensions.

2004-02-04  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* dim-vector.h (dim_vector::squeeze): New function.
	(Array<T>::assignN): Use it instead of chop_trailing_singltons for
	deciding whether the assignment conforms.

	* Array.cc (Array<T>::assignN): Simplify dimension check by
	comparing rhs_dims and frozen_len sans trailing singletons.

2004-02-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* idx-vector.cc (tree_to_mat_idx): New arg, conversion_error.
	Call error handler and return conversion_error == true if arg is
	not integer.
	(IDX_VEC_REP::idx_vector_rep): Exit early if conversion_error.

2004-02-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* boolNDArray.h (boolNDArray::boolNDArray): Declare dim_vector
	reference arg const.

2004-01-30  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array-flags.cc: Include Array-flags.h, not Array.h.  Doh.

2004-01-30  Jakub Bogusz  <qboosh@pld-linux.org>
